--- a/.github/workflows/build_and_tag.yml
+++ b/.github/workflows/build_and_tag.yml
@@ -41,12 +41,12 @@ jobs:
         uses: mathieudutour/github-tag-action@v6.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          default_bump: ${{ github.event.inputs.bumpLevel }}
+          default_bump: ${{ inputs.bumpLevel }}
           dry_run: true
 
       - name: Update version in PHP file
         run: |
-          sed -i 's/\(* Version: *\)[0-9]\+\.[0-9]\+\.[0-9]\+/\1'${{ steps.tag_version.outputs.new_version }}'/' PluginToolsServer.php
+          sed -i 's/\(* Version: *\)[0-9]\+\.[0-9]\+\.[0-9]\+/\1'${{ steps.tag_version.outputs.new_version }}'/' ${{ inputs.root_php_file }}
 
       - name: Update version in package.json
         run: |
